# claude-session-manager

./: .gitignore  .vercelignore  CLAUDE.md  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy-frontend.yml
scripts/: build-release.sh  설치하기.command
src/: App.tsx  index.css  store.ts  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: remote.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  parser.rs  scanner.rs
src/components/: AboutModal.tsx  PreviewPanel.tsx  ProjectSidebar.tsx  SearchBar.tsx  SessionList.tsx  ShortcutsModal.tsx  ThemeSelector.tsx  UpdateBanner.tsx
src/hooks/: useFlash.ts  useKeyboardNav.ts  usePanelResize.ts  useUpdateChecker.ts
