[package]
name = "claude-session-manager"
version = "0.8.7"
description = "Claude Code Session Manager - Browse, search, and resume your Claude Code sessions"
authors = ["levit"]
edition = "2021"

[lib]
name = "claude_session_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.34", features = ["bundled"] }
notify = "7"
tokio = { version = "1", features = ["sync"] }
